--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "builds": [
-    { "src": "pages/**/*.js", "use": "@vercel/node" }
+    { "src": "pages/api/**/*.js", "use": "@vercel/node" },
+    { "src": "package.json", "use": "@vercel/next" }
   ]
 }
